kubernetes/demo/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: demo-gateway
        protocol: HTTP
      hosts:
        - "demo.test"
        - "example.local"
