kubernetes/demo/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-gateway-virtual-service
  namespace: demo
spec:
  hosts:
    - yuexclusive.top
    - demo.test
  gateways:
    - demo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: nginx
